# Ai-code-analyzer

./: README.md  package-lock.json  package.json  pyproject.toml  replit.nix  theme.json
client/src/: index.css
client/src/components/: code-editor.tsx  explanation-panel.tsx  ocr-upload.tsx
client/src/components/ui/: code-editor.tsx  language-selector.tsx
client/src/lib/: gemini.ts
server/: index.ts  routes.ts  storage.ts  vite.ts
server/services/: gemini.ts  openai.ts  pytorch.ts
server/services/python/: handwriting_recognition.py
shared/: schema.ts
